# aggdsl

./: .gitignore  Pendo Aggregation How-To (Project Truth).md  Pendo Aggregation Spec Sheet (Project Truth).md  README.md  SESSION_REPLAY_EXAMPLES.md  pyproject.toml  validate_all_dsl.sh
.github/agents/: analytics.md  dslagent.md
.github/skills/pendo-agg/: SKILL.md
src/aggdsl/: __init__.py  cli.py  compiler.py  decompiler.py  dsl_ast.py  parser.py  sample.json
tests/: test_cli_unicode_output.py  test_comments.py  test_decompile_null_source.py  test_decompile_roundtrip.py  test_eval_list_literal_with_commas.py  test_fork_block.py  test_fork_stage.py  test_group_fieldsmap.py  test_group_multiline.py  test_group_object_arg.py  test_merge_and_unmarshal.py  test_named_pipeline_format.py  test_pes_stage.py  test_pipeline_mode_with_spawn_raw.py  test_response_location_ignored.py  test_segment_and_bulkexpand.py  test_select_multiline.py  test_session_replays_stage.py  test_spawn_and_switch.py  test_spawn_branch_with_merge_block.py  test_spec_example.py  test_template_placeholders.py  test_timeseries_last_with_spaces.py  test_timeseries_negative_count.py  test_unwind.py
tools/: __init__.py
tools/pendo/: __init__.py  chart.py  dsl_compile.py  env.py  lookup_segments.py  rewrite.py  run_agg.py  validate.py
