[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "aggdsl"
version = "0.1.2"
description = "A small DSL that compiles to Pendo Aggregation API JSON bodies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "daichi" }]
keywords = ["pendo", "aggregation", "dsl"]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
aggdsl = "aggdsl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aggdsl"]
